# LightSim

./: .timetracker  Cargo.toml  Makefile  README.md  run.bat
shaders/: compute.wgsl  fragment.wgsl  vertex.wgsl
shaders/first_try/: compute.wgsl  fragment.wgsl
src/: first_alternative_renderer.rs  lib.rs  main.rs  renderer.rs  second_alternative_renderer.rs  state_machine.rs
web/: index.html  index.mjs
web/shaders/: compute.wgsl  fragment.wgsl  vertex.wgsl
web/wasm/: rs_wgpu_cube.d.ts  rs_wgpu_cube.js  rs_wgpu_cube_bg.wasm  rs_wgpu_cube_bg.wasm.d.ts
