[package]
name = "rs_wgpu_cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3.67", features = ["WebGl2RenderingContext", "HtmlCanvasElement", "DomRect"] }
js-sys = "0.3.67"

[dependencies]
futures = "0.3.30"
serde = "1.0.195"
wgpu = "0.19.1"
winit = { version= "0.29.10"}

[features]
# Defines a feature named `webp` that does not enable any other features.
old = []
